k8s/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  selector:
    app: notification
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
